--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>args4j</groupId>
+      <artifactId>args4j</artifactId>
+      <version>2.0.26</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
