--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,11 @@
       <artifactId>sanselan</artifactId>
       <version>0.97-incubator</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
   </dependencies>
 </project>
